--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "getstream": "^8.1.2",
+    "mocha": "^10.2.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21",
