--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -25,7 +25,7 @@ jobs:
           npm install cors
 
       - name: Run Server
-        run: npm run start
+        run: npm run dev
 
       - name: Copy server files to EC2 instance
         uses: appleboy/scp-action@master
