--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,7 +17,19 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
-
+          
+      - name: Copy server files to EC2 instance
+        uses: appleboy/scp-action@master
+        with:
+          host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
+          username: ec2-user
+          key: ${{ secrets.KEY }}
+          source: "~/"
+          target: "~/"
+          
+      - name: Move into server folder
+        run: cd server
+      
       - name: Install server dependencies
         run: |
           npm install mongodb mongoose
@@ -27,54 +39,48 @@ jobs:
       - name: Run Server
         run: npm run dev
 
-      - name: Copy server files to EC2 instance
-        uses: appleboy/scp-action@master
-        with:
-          host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
-          username: ec2-user
-          key: ${{ secrets.KEY }}
-          source: "server/**"
-          target: "~/"
+      
 
-      - name: Connect to EC2 instance via SSH
-        uses: appleboy/ssh-action@master
-        with:
-          host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
-          username: ec2-user
-          key: ${{ secrets.KEY }}
-          script: |
-            cd /home/ec2-user/server
-            pm2 stop index.js
-            pm2 start index.js
+#       - name: Connect to EC2 instance via SSH
+#         uses: appleboy/ssh-action@master
+#         with:
+#           host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
+#           username: ec2-user
+#           key: ${{ secrets.KEY }}
+#           script: |
+#             cd /home/ec2-user/server
+#             pm2 stop index.js
+#             pm2 start index.js
 
-      - name: Install client dependencies
-        run: |
-          npm install react@17.0.2 react-dom@17.0.2 --force
-          npm install stream-chat stream-chat-react universal-cookie --force
-          npm install axios --force
-          npm install uuid --force
+#       - name: Install client dependencies
+#         run: |
+#           npm install react@17.0.2 react-dom@17.0.2 --force
+#           npm install stream-chat stream-chat-react universal-cookie --force
+#           npm install axios --force
+#           npm install uuid --force
 
-      - name: Build client
-        run: npm start
+#       - name: Build client
+#         run: npm start
 
-      - name: Copy client files to EC2 instance
-        uses: appleboy/scp-action@master
-        with:
-          host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
-          username: ec2-user
-          key: ${{ secrets.KEY }}
-          source: "client/build/**"
-          target: "~/"
+#       - name: Copy client files to EC2 instance
+#         uses: appleboy/scp-action@master
+#         with:
+#           host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
+#           username: ec2-user
+#           key: ${{ secrets.KEY }}
+#           source: "client/build/**"
+#           target: "~/"
 
-      - name: Connect to EC2 instance via SSH
-        uses: appleboy/ssh-action@master
-        with:
-          host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
-          username: ec2-user
-          key: ${{ secrets.KEY }}
-          script: |
-            cd /home/ec2-user/client
-            sudo service nginx stop
-            rm -rf /usr/share/nginx/html/*
-            cp -r build/* /usr/share/nginx/html/
-            sudo service nginx start
+#       - name: Connect to EC2 instance via SSH
+#         uses: appleboy/ssh-action@master
+#         with:
+#           host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
+#           username: ec2-user
+#           key: ${{ secrets.KEY }}
+#           script: |
+#             cd /home/ec2-user/client
+#             sudo service nginx stop
+#             rm -rf /usr/share/nginx/html/*
+#             cp -r build/* /usr/share/nginx/html/
+#             sudo service nginx start
+
