--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 16.x
           
       - name: Copy server files to EC2 instance
-        uses: appleboy/scp-action@aws
+        uses: appleboy/scp-action@master
         with:
           host: 54.238.166.164
           username: ec2-user
