--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -24,6 +24,7 @@ jobs:
           host: 54.238.166.164
           username: ec2-user
           key: ${{ secrets.KEY }}
+          source: "."
           target: "~/"
           
       - name: Move into server folder
