--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           host: 54.238.166.164
           username: ec2-user
+          port: 22
           key: ${{ secrets.KEY }}
           source: "."
           target: "~/"
