--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Copy server files to EC2 instances
         uses: appleboy/scp-action@master
         with:
-          host: 54.238.166.164
+          host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
           username: ec2-user
           port: 22
           key: ${{ secrets.KEY }}
