--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -28,13 +28,14 @@ jobs:
           port: 22
           key: ${{ secrets.KEY }}
           source: "."
-          target: "~/"
+          target: "~/CalendarApp"
           
       - name: Move into server folder
         run: cd server
       
       - name: Install server dependencies
         run: |
+          npm install
           npm install mongodb mongoose
           npm install bcrypt crypto dotenv express getstream stream-chat@4.1.0 nodemon twilio --force
           npm install cors
