edited change directories

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -31,7 +31,10 @@ jobs:
           target: "~/CalendarApp"
           
       - name: Move into server folder
-        run: cd server
+        run: |
+            cd CalendarApp
+            cd server
+        
       
       - name: Install server dependencies
         run: |
