edited calendarapp directory cd

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -32,7 +32,7 @@ jobs:
           
       - name: Move into server folder
         run: |
-            cd CalendarApp
+            cd ~/CalendarApp
             cd server
         
       
