--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -30,10 +30,6 @@ jobs:
           source: "."
           target: "~/CalendarApp"
           
-      - name: Move into server folder
-        run: |
-            cd server
-        
       
       - name: Install server dependencies
         run: |
@@ -41,6 +37,7 @@ jobs:
           npm install mongodb mongoose
           npm install bcrypt crypto dotenv express getstream stream-chat@4.1.0 nodemon twilio --force
           npm install cors
+        working-directory: ./CalendarApp/server # Change this to your desired working directory
 
       - name: Run Server
         run: npm run start
