Edited working directory

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -29,15 +29,15 @@ jobs:
           key: ${{ secrets.KEY }}
           source: "."
           target: "~/"
-          
       
+
       - name: Install server dependencies
         run: |
           npm install
           npm install mongodb mongoose
           npm install bcrypt crypto dotenv express getstream stream-chat@4.1.0 nodemon twilio --force
           npm install cors
-        working-directory: ./server # Change this to your desired working directory
+          working-directory: ~/server # Change this to your desired working directory
 
       - name: Run Server
         run: npm run start
