--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -28,16 +28,16 @@ jobs:
           port: 22
           key: ${{ secrets.KEY }}
           source: "."
-          target: "~/"
+          target: "~/CalendarApp"
       
 
       - name: Install server dependencies
         run: |
-          cd ~/CalendarApp/server
-          npm install
-          npm install mongodb mongoose
-          npm install bcrypt crypto dotenv express getstream stream-chat@4.1.0 nodemon twilio --force
-          npm install cors
+            cd ~/CalendarApp/server
+            npm install
+            npm install mongodb mongoose
+            npm install bcrypt crypto dotenv express getstream stream-chat@4.1.0 nodemon twilio --force
+            npm install cors
 
 
       - name: Run Server
