stops and starts pm2

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -43,6 +43,8 @@ jobs:
             npm install mongodb mongoose
             npm install bcrypt crypto dotenv express getstream stream-chat@4.1.0 nodemon twilio --force
             npm install cors
+            sudo killall -9 $(sudo lsof -t -i)
+            pm2 delete index
             pm2 start index.js
             cd /home/ec2-user/CalendarApp/client
             npm install
@@ -50,6 +52,7 @@ jobs:
             npm install stream-chat stream-chat-react universal-cookie --force
             npm install axios --force
             npm install uuid --force
+            pm2 delete my-app
             pm2 start npm --name "my-app" -- start
 
 
