--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -20,6 +20,17 @@ jobs:
         with:
           node-version: 16.x
           
+      - name: Delete old files in target directory
+        uses: appleboy/ssh-action@master
+        with:
+          host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
+          username: ec2-user
+          port: 22
+          key: ${{ secrets.KEY }}
+          script: |
+            cd ~/CalendarApp
+            rm -rf *
+          
       - name: Copy server files to EC2 instances
         uses: appleboy/scp-action@master
         with:
