--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -20,6 +20,17 @@ jobs:
         with:
           node-version: 16.x
           
+      - name: Delete old files in target directory
+        uses: appleboy/ssh-action@master
+        with:
+          host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
+          username: ec2-user
+          port: 22
+          key: ${{ secrets.KEY }}
+          script: |
+            cd ~/CalendarApp
+            rm -rf *
+            
       - name: Copy server files to EC2 instances
         uses: appleboy/scp-action@master
         with:
@@ -43,8 +54,8 @@ jobs:
             npm install mongodb mongoose
             npm install bcrypt crypto dotenv express getstream stream-chat@4.1.0 nodemon twilio --force
             npm install cors
-            sudo killall -9 $(sudo lsof -t -i)
-            pm2 delete index
+            pm2 stop all
+            pm2 delete all
             pm2 start index.js
             cd /home/ec2-user/CalendarApp/client
             npm install
@@ -52,51 +63,8 @@ jobs:
             npm install stream-chat stream-chat-react universal-cookie --force
             npm install axios --force
             npm install uuid --force
-            pm2 delete my-app
             pm2 start npm --name "my-app" -- start
 
 
     
-#       - name: Connect to EC2 instance via SSH
-#         uses: appleboy/ssh-action@master
-#         with:
-#           host: ec2-18-180-48-223.ap-northeast-1.compute.amazonaws.com
-#           username: ec2-user
-#           key: ${{ secrets.KEY }}
-#           script: |
-#            cd /home/ec2-user/server
-#             pm2 stop index.js
-#             pm2 start index.js
-
-#       - name: Install client dependencies
-#         run: |
-#           npm install react@17.0.2 react-dom@17.0.2 --force
-#           npm install stream-chat stream-chat-react universal-cookie --force
-#           npm install axios --force
-#           npm install uuid --force
-
-#       - name: Build client
-#         run: npm start
-
-#       - name: Copy client files to EC2 instance
-#         uses: appleboy/scp-action@master
-#         with:
-#           host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
-#           username: ec2-user
-#           key: ${{ secrets.KEY }}
-#           source: "client/build/**"
-#           target: "~/"
-
-#       - name: Connect to EC2 instance via SSH
-#         uses: appleboy/ssh-action@master
-#         with:
-#           host: ec2-54-238-166-164.ap-northeast-1.compute.amazonaws.com
-#           username: ec2-user
-#           key: ${{ secrets.KEY }}
-#           script: |
-#             cd /home/ec2-user/client
-#             sudo service nginx stop
-#             rm -rf /usr/share/nginx/html/*
-#             cp -r build/* /usr/share/nginx/html/
-#             sudo service nginx start
 
