--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -19,17 +19,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
-          
-      - name: Delete old files in target directory
-        uses: appleboy/ssh-action@master
-        with:
-          host: ec2-54-178-36-70.ap-northeast-1.compute.amazonaws.com
-          username: ec2-user
-          port: 22
-          key: ${{ secrets.KEY }}
-          script: |
-            cd ~/CalendarApp
-            rm -rf *
             
       - name: Copy server files to EC2 instances
         uses: appleboy/scp-action@master
@@ -63,7 +52,7 @@ jobs:
             npm install stream-chat stream-chat-react universal-cookie --force
             npm install axios --force
             npm install uuid --force
-            pm2 start npm --name "my-app" -- start
+            npm start
 
 
     
