Updated yml to build and serve

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,7 @@ jobs:
             pm2 stop all
             pm2 delete all
             pm2 start index.js
+            cd /home/ec2-user/CalendarApp/client
+            npm run build
+            serve -s build
         
