run pm2 to start client

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,6 @@ jobs:
             pm2 start index.js
             cd /home/ec2-user/CalendarApp/client
             npm run build
-            serve -s build
+            pm2 serve build 3000 --name client
+
         
