Update .env to test secrets

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=mongodb+srv://achan:achan@calendar.1lb7whx.mongodb.net/Calendar?retryWrites=true&w=majority
+DATABASE_URL=${{ secrets.DATABASE_URL }}
 
 STREAM_APP_ID=1237885
 STREAM_API_KEY=ctuxx9s77qmj
