--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "getstream": "^8.1.2",
+    "getstream": "^8.0.2",
     "mocha": "^10.2.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22",
-    "stream-chat": "^4.1.0",
+    "nodemon": "^3.1.7",
+    "server": "file:",
+    "stream-chat": "^8.40.9",
     "twilio": "^4.9.0"
   }
 }
